# rubberband

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-dev_raw.txt  requirements.txt  requirements_raw.txt  runcodecheckers  runtests  server.py  setup.cfg  setup.py
.github/workflows/: ci.yaml
config/: app.cfg  oauth2-proxy.cfg  rubberband-oauth
doc/: Makefile  crashcourses.md  overview.md  roadmap.md
doc/source/: api.rst  conf.py  configuration.md  crashcourses.md  documentation.md  folderstructure.md  index.rst  roadmap.rst
files/static/: additional_readers.xml  eval_seed.xml  eval_standard.xml
rubberband/: __init__.py  boilerplate.py  constants.py  routes.py  test.html  version.py
rubberband/handlers/: __init__.py
rubberband/models/: __init__.py  model_helpers.py
rubberband/static/: FiraSans-ExtraBold.eot  FiraSans-ExtraLight.eot  FiraSans-MediumItalic.eot
rubberband/templates/: 400.html  404.html  500.html  base.html  basket.html  compare.html  error.html  faq.html  file.html  help.html  instance_detail_view.html  modal.html  narrow.html  personal.html  result_view.html  results_table.html  search.html  search_form.html  statistics.html  table_view.html  test.html  testset_view.html  upload.html  visualize.html  wide.html
rubberband/utils/: __init__.py  es_helpers.py  file.py  gitlab.py  hasher.py  helpers.py  importer.py  mailer.py  rbloghandler.py  stats.py  typer.py
staticfiles/instancedata/: allpublic.solu
staticfiles/static/: additional_readers.xml  eval_groupgithash_exclude.xml  eval_groupgithash_exclude_detailed.xml  eval_grouplpsolver_exclude.xml  eval_groupsettings_exclude.xml  eval_groupsettings_exclude_detailed.xml  eval_seed.xml  eval_singleruns_exclude.xml  eval_singleruns_include.xml  eval_singleruns_punish.xml  eval_standard.xml  evalclusterbench_queue.xml
staticfiles/xml/: additional_readers.xml  eval_groupgithash_exclude.xml  eval_groupgithash_exclude_detailed.xml  eval_grouplpsolver_exclude.xml  eval_groupsettings_exclude.xml  eval_groupsettings_exclude_detailed.xml  eval_groupsettings_include_detailed.xml  eval_singleruns_exclude.xml  eval_singleruns_include.xml  eval_singleruns_punish.xml  evalclusterbench_queuenode.xml  evaluation-deco.xml  evaluation-pure.xml  reader-genios.xml
tests/: base.py  sandbox.html  test_api.py  test_frontend.py  test_utils.py
(+148 files in other folders)
